--- a/Wabisabi/Wabisabi.vcxproj.filters
+++ b/Wabisabi/Wabisabi.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform\Opengl">
+      <UniqueIdentifier>{5E812C1D-CA0C-9AE1-D31D-1DD63F28F6E1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
@@ -13,8 +16,14 @@
     <Filter Include="Wabisabi\Events">
       <UniqueIdentifier>{6BEDB3BA-D778-217F-E089-A4734C947D7F}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Wabisabi\Renderer">
+      <UniqueIdentifier>{ED02602E-5919-5EC4-A290-E9E50EE62E4C}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Opengl\OpenglVertexBuffer.h">
+      <Filter>Platform\Opengl</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\InputWindows.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -49,20 +58,33 @@
     <ClInclude Include="src\Wabisabi\KeyCodes.h">
       <Filter>Wabisabi</Filter>
     </ClInclude>
+    <ClInclude Include="src\Wabisabi\Layer.h">
+      <Filter>Wabisabi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Wabisabi\LayerStack.h">
+      <Filter>Wabisabi</Filter>
+    </ClInclude>
     <ClInclude Include="src\Wabisabi\Log.h">
       <Filter>Wabisabi</Filter>
     </ClInclude>
     <ClInclude Include="src\Wabisabi\MouseCodes.h">
       <Filter>Wabisabi</Filter>
     </ClInclude>
+    <ClInclude Include="src\Wabisabi\Renderer\Renderer.h">
+      <Filter>Wabisabi\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Wabisabi\Renderer\VertexBuffer.h">
+      <Filter>Wabisabi\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Wabisabi\Window.h">
       <Filter>Wabisabi</Filter>
     </ClInclude>
     <ClInclude Include="src\wbpch.h" />
-    <ClInclude Include="src\Wabisabi\VertexBuffer.h" />
-    <ClInclude Include="src\Wabisabi\OpenglVertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Opengl\OpenglVertexBuffer.cpp">
+      <Filter>Platform\Opengl</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\InputWindows.cpp">
       <Filter>Platform\Windows</Filter>
     </ClCompile>
@@ -72,11 +94,18 @@
     <ClCompile Include="src\Wabisabi\Application.cpp">
       <Filter>Wabisabi</Filter>
     </ClCompile>
+    <ClCompile Include="src\Wabisabi\LayerStack.cpp">
+      <Filter>Wabisabi</Filter>
+    </ClCompile>
     <ClCompile Include="src\Wabisabi\Log.cpp">
       <Filter>Wabisabi</Filter>
     </ClCompile>
+    <ClCompile Include="src\Wabisabi\Renderer\Renderer.cpp">
+      <Filter>Wabisabi\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Wabisabi\Renderer\VertexBuffer.cpp">
+      <Filter>Wabisabi\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\wbpch.cpp" />
-    <ClCompile Include="src\Wabisabi\VertexBuffer.cpp" />
-    <ClCompile Include="src\Wabisabi\OpenglVertexBuffer.cpp" />
   </ItemGroup>
 </Project>
