--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Wabisabi/vendor/spdlog"]
 	path = Wabisabi/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Wabisabi/vendor/imgui"]
+	path = Wabisabi/vendor/imgui
+	url = https://github.com/ocornut/imgui
