--- a/Wabisabi/Wabisabi.vcxproj.filters
+++ b/Wabisabi/Wabisabi.vcxproj.filters
@@ -21,9 +21,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Platform\Opengl\OpenglVertexBuffer.h">
-      <Filter>Platform\Opengl</Filter>
-    </ClInclude>
     <ClInclude Include="src\Platform\Windows\InputWindows.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -73,18 +70,21 @@
     <ClInclude Include="src\Wabisabi\Renderer\Renderer.h">
       <Filter>Wabisabi\Renderer</Filter>
     </ClInclude>
-    <ClInclude Include="src\Wabisabi\Renderer\VertexBuffer.h">
-      <Filter>Wabisabi\Renderer</Filter>
-    </ClInclude>
     <ClInclude Include="src\Wabisabi\Window.h">
       <Filter>Wabisabi</Filter>
     </ClInclude>
     <ClInclude Include="src\wbpch.h" />
+    <ClInclude Include="src\Wabisabi\Renderer\Buffer.h">
+      <Filter>Wabisabi\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\Opengl\OpenglBuffer.h">
+      <Filter>Platform\Opengl</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\Opengl\OpenglShader.h" />
+    <ClInclude Include="src\Wabisabi\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Platform\Opengl\OpenglGLFWContext.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Platform\Opengl\OpenglVertexBuffer.cpp">
-      <Filter>Platform\Opengl</Filter>
-    </ClCompile>
     <ClCompile Include="src\Platform\Windows\InputWindows.cpp">
       <Filter>Platform\Windows</Filter>
     </ClCompile>
@@ -103,9 +103,12 @@
     <ClCompile Include="src\Wabisabi\Renderer\Renderer.cpp">
       <Filter>Wabisabi\Renderer</Filter>
     </ClCompile>
-    <ClCompile Include="src\Wabisabi\Renderer\VertexBuffer.cpp">
-      <Filter>Wabisabi\Renderer</Filter>
-    </ClCompile>
     <ClCompile Include="src\wbpch.cpp" />
+    <ClCompile Include="src\Wabisabi\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Platform\Opengl\OpenglBuffer.cpp">
+      <Filter>Platform\Opengl</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Opengl\OpenglShader.cpp" />
+    <ClCompile Include="src\Platform\Opengl\OpenglGLFWContext.cpp" />
   </ItemGroup>
 </Project>
