--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Wabisabi/vendor/imgui"]
 	path = Wabisabi/vendor/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "Wabisabi/vendor/glm"]
+	path = Wabisabi/vendor/glm
+	url = https://github.com/g-truc/glm
