--- a/Wabisabi/Wabisabi.vcxproj
+++ b/Wabisabi/Wabisabi.vcxproj
@@ -127,10 +127,12 @@
     <ClInclude Include="src\Wabisabi\Log.h" />
     <ClInclude Include="src\Wabisabi\MouseCodes.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Buffer.h" />
+    <ClInclude Include="src\Wabisabi\Renderer\Camera.h" />
     <ClInclude Include="src\Wabisabi\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Renderer.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Texture.h" />
     <ClInclude Include="src\Wabisabi\Renderer\VertexArray.h" />
+    <ClInclude Include="src\Wabisabi\ShaderLoader.h" />
     <ClInclude Include="src\Wabisabi\Window.h" />
     <ClInclude Include="src\wbpch.h" />
     <ClInclude Include="vendor\stb\stb\stb_image.h" />
@@ -147,6 +149,7 @@
     <ClCompile Include="src\Wabisabi\LayerStack.cpp" />
     <ClCompile Include="src\Wabisabi\Log.cpp" />
     <ClCompile Include="src\Wabisabi\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Wabisabi\Renderer\Camera.cpp" />
     <ClCompile Include="src\Wabisabi\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Wabisabi\Renderer\Texture.cpp" />
     <ClCompile Include="src\Wabisabi\Renderer\VertexArray.cpp" />
