--- a/Wabisabi/Wabisabi.vcxproj.filters
+++ b/Wabisabi/Wabisabi.vcxproj.filters
@@ -116,6 +116,8 @@
     </ClInclude>
     <ClInclude Include="src\Wabisabi\Renderer\Texture.h" />
     <ClInclude Include="src\Platform\Opengl\OpenglTexture.h" />
+    <ClInclude Include="src\Wabisabi\Renderer\Camera.h" />
+    <ClInclude Include="src\Wabisabi\ShaderLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\Opengl\OpenglBuffer.cpp">
@@ -162,5 +164,6 @@
     </ClCompile>
     <ClCompile Include="src\Wabisabi\Renderer\Texture.cpp" />
     <ClCompile Include="src\Platform\Opengl\OpenglTexture.cpp" />
+    <ClCompile Include="src\Wabisabi\Renderer\Camera.cpp" />
   </ItemGroup>
 </Project>
