--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -98,6 +98,7 @@
     <None Include="shaders\lightSource.vert" />
     <None Include="shaders\shader.frag" />
     <None Include="shaders\shader.vert" />
+    <None Include="shaders\simple.vert" />
     <None Include="shaders\structs\material.prep" />
     <None Include="shaders\test.prep" />
     <None Include="shaders\test.vert" />
