--- a/Wabisabi/Wabisabi.vcxproj.filters
+++ b/Wabisabi/Wabisabi.vcxproj.filters
@@ -129,6 +129,7 @@
     </ClInclude>
     <ClInclude Include="src\Wabisabi\Renderer\Mesh.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Model.h" />
+    <ClInclude Include="src\Wabisabi\Types.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\Opengl\OpenglBuffer.cpp">
