--- a/Wabisabi/Wabisabi.vcxproj
+++ b/Wabisabi/Wabisabi.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="src\Platform\Opengl\OpenglBuffer.h" />
     <ClInclude Include="src\Platform\Opengl\OpenglGLFWContext.h" />
     <ClInclude Include="src\Platform\Opengl\OpenglShader.h" />
+    <ClInclude Include="src\Platform\Opengl\OpenglShaderManager.h" />
     <ClInclude Include="src\Platform\Opengl\OpenglTexture.h" />
     <ClInclude Include="src\Platform\Opengl\OpenglVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\InputWindows.h" />
@@ -129,10 +130,14 @@
     <ClInclude Include="src\Wabisabi\Renderer\Buffer.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Camera.h" />
     <ClInclude Include="src\Wabisabi\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Wabisabi\Renderer\Interface\Renderable.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Material.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Mesh.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Model.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Renderer.h" />
+    <ClInclude Include="src\Wabisabi\Renderer\RenderQueue.h" />
+    <ClInclude Include="src\Wabisabi\Renderer\Shader.h" />
+    <ClInclude Include="src\Wabisabi\Renderer\ShaderManager.h" />
     <ClInclude Include="src\Wabisabi\Renderer\Texture.h" />
     <ClInclude Include="src\Wabisabi\Renderer\VertexArray.h" />
     <ClInclude Include="src\Wabisabi\Loader.h" />
@@ -145,6 +150,7 @@
     <ClCompile Include="src\Platform\Opengl\OpenglBuffer.cpp" />
     <ClCompile Include="src\Platform\Opengl\OpenglGLFWContext.cpp" />
     <ClCompile Include="src\Platform\Opengl\OpenglShader.cpp" />
+    <ClCompile Include="src\Platform\Opengl\OpenglShaderManager.cpp" />
     <ClCompile Include="src\Platform\Opengl\OpenglTexture.cpp" />
     <ClCompile Include="src\Platform\Opengl\OpenglVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\InputWindows.cpp" />
@@ -158,6 +164,9 @@
     <ClCompile Include="src\Wabisabi\Renderer\Mesh.cpp" />
     <ClCompile Include="src\Wabisabi\Renderer\Model.cpp" />
     <ClCompile Include="src\Wabisabi\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Wabisabi\Renderer\RenderQueue.cpp" />
+    <ClCompile Include="src\Wabisabi\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Wabisabi\Renderer\ShaderManager.cpp" />
     <ClCompile Include="src\Wabisabi\Renderer\Texture.cpp" />
     <ClCompile Include="src\Wabisabi\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\wbpch.cpp">
